# ioc-extractor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: extract_example.py  sample_report.txt
src/ioc_extractor/: __init__.py  cli.py
src/ioc_extractor/core/: defanging.py  extractor.py  models.py  patterns.py  validators.py
src/ioc_extractor/io/: readers.py  writers.py
tests/: test_defanging.py  test_extractor.py  test_patterns.py  test_readers.py  test_validators.py  test_writers_and_cli.py
