[project]
name = "ioc-extractor"
version = "0.1.1"
description = "Production-grade extraction, validation, and normalization of Indicators of Compromise (IOCs) from unstructured text."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["threat-intelligence", "ioc", "cybersecurity", "dfir", "cti"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/ioc-extractor"
Issues = "https://github.com/yourname/ioc-extractor/issues"

[project.scripts]
ioc-extractor = "ioc_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["ioc_extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ioc_extractor --cov-report=term-missing"
